RESOLVED FIXED97719
JSObject::ensureArrayStorage() ignores the possibility that extensions have been prevented
https://bugs.webkit.org/show_bug.cgi?id=97719
Summary JSObject::ensureArrayStorage() ignores the possibility that extensions have b...
Filip Pizlo
Reported 2012-09-26 12:52:51 PDT
Patch forthcoming.
Attachments
the patch (16.63 KB, patch)
2012-09-26 12:55 PDT, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2012-09-26 12:55:15 PDT
Created attachment 165857 [details] the patch
WebKit Review Bot
Comment 2 2012-09-26 13:01:29 PDT
Attachment 165857 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/JavaScriptCore/runtime/JSObject.h:654: The parameter name "globalData" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3 2012-09-26 13:08:07 PDT
Note You need to log in before you can comment on or make changes to this bug.