JSObject::ensureArrayStorage() ignores the possibility that extensions have been prevented https://bugs.webkit.org/show_bug.cgi?id=97719

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

* runtime/JSObject.cpp:
(JSC::JSObject::ensureArrayStorageSlow):
(JSC):
* runtime/JSObject.h:
(JSC::JSObject::ensureArrayStorage):
(JSObject):

LayoutTests:

* fast/js/dfg-arrayify-when-late-prevent-extensions-expected.txt: Added.
* fast/js/dfg-arrayify-when-late-prevent-extensions.html: Added.
* fast/js/dfg-arrayify-when-prevent-extensions-expected.txt: Added.
* fast/js/dfg-arrayify-when-prevent-extensions.html: Added.
* fast/js/jsc-test-list:
* fast/js/script-tests/dfg-arrayify-when-late-prevent-extensions.js: Added.
(foo):
* fast/js/script-tests/dfg-arrayify-when-prevent-extensions.js: Added.
(foo):



Canonical link: https://commits.webkit.org/115705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129691 268f45cc-cd09-0410-ab3c-d52691b4dbfc