LayoutTests/fast/js/script-tests/dfg-arrayify-when-prevent-extensions.js
@@ -1,0 +1,14 @@
+description(
+"Tests that Arraify does good things when Object.preventExtensions() has been called."
+);
+
+function foo(o) {
+    o[0] = 42;
+    return o[0];
+}
+
+for (var i = 0; i < 200; ++i) {
+    var o = {};
+    Object.preventExtensions(o);
+    shouldBe("foo(o)", "void 0");
+}
